syntax = "proto3";
package grpc;

import "dto.proto";

message GetUserRequest {
  int64 id = 1;
  bool by_external_id = 2;
}

message UpdateUserRequest {
  int64 id = 1;
  oneof target {
    string language = 2;
    Location location = 3;
    PremiumVariants premium_variant = 4;
  }

  enum PremiumVariants {
    PREMIUM_VARIANTS_UNSPECIFIED = 0;
    PREMIUM_VARIANTS_MONTH = 1;
    PREMIUM_VARIANTS_QUARTER = 2;
    PREMIUM_VARIANTS_HALF_YEAR = 3;
    PREMIUM_VARIANTS_YEAR = 4;
  }
}

message RegistrationRequest {
  ExternalUser user = 1;
  Service service = 2;
}

message RegistrationResponse {
  RegistrationStatus status = 1;
  int64 id = 2;
}

enum RegistrationStatus {
  REGISTRATION_STATUS_UNSPECIFIED = 0;
  REGISTRATION_STATUS_CREATED = 1;
  REGISTRATION_STATUS_ALREADY_PRESENT = 2;
}
